ATLAS-2233: Remove -XX:MaxPermSize Parm as removed in Java 8
Signed-off-by: David Radley <david_radley@uk.ibm.com>